tests/negative/gold/list_literal_type_test.gold
tests/negative/list_literal_type_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/list_literal_type_test.toit:4:6: error: Class 'List' does not have any method 'foo'
  [].foo
     ^~~
tests/negative/list_literal_type_test.toit:5:7: error: Class 'List' does not have any method 'foo'
  [1].foo
      ^~~
tests/negative/list_literal_type_test.toit:6:16: error: Class 'List' does not have any method 'foo'
  [1, 2, 3, 4].foo
               ^~~
tests/negative/list_literal_type_test.toit:7:9: error: Class 'List' does not have any method 'foo'
  [300].foo
        ^~~
tests/negative/list_literal_type_test.toit:8:21: error: Class 'List' does not have any method 'foo'
  [1, 2, 3, 4, 300].foo
                    ^~~
Compilation failed.
